test/src/e2e_vm_tests/test_programs/should_fail/for_loop_error/src/main.sw
script;

fn main() {
    let mut v : Vec<u8> = Vec::new();
    v.push(1);
    v.push(2);
    v.push(3);
    for elem in v.iter() {
        log(elem);
        3
    };
}
